syntax = 'proto3';

package bsdsensors.nuvoton;

message ManualParams {
    double percent = 1;
}

message ControlPoint {
    double temp = 1;
    double percent = 2;
}

message SmartFanIVParams {
    repeated ControlPoint control_points = 1;
}

message FanControlMethod {
    oneof params {
        ManualParams manual_params = 1;
        SmartFanIVParams smart_fan_iv_params = 3;
    }
}

message ManualChangePercentRequest {
    double percent = 1;
}

message FanControlRequest {
    oneof request {
        ManualChangePercentRequest manual_change_percent = 1;
    }
}
