syntax = 'proto3';

package bsdsensors;

message TemperatureProto {
    string name = 1;
    // Temperature in celsius.
    double value = 2;
    // Temperature source.
    string source = 3;
}

message SetSourceRequest {
    string source = 1;
}

message TemperatureRequest {
    string name = 1;
    oneof request {
        SetSourceRequest set_source = 2;
    }
}
